1024 LMS  피드백 수정 진행중

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 # 내 로컬 규칙 유지
 .cursor/
 node_modules
+SUBADMIN_MANAGEMENT_UPDATE.md
+capture-pages.js
+SUBADMIN_MANAGEMENT_UPDATE.md
+capture-pages.js
