--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pdfjs-dist": "^3.11.174",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-easy-crop": "^5.5.3",
     "react-pdf": "^10.2.0",
     "react-router-dom": "^7.9.4",
     "tinymce": "^8.2.0",
