--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ lerna-debug.log*
 .env.local
 .env.production
 .env.development
+# But allow .env.example
+!.env.example
 
 # Temporary files
 *.tmp
@@ -41,14 +43,12 @@ lerna-debug.log*
 # Public assets (large files)
 public/
 
-# Documentation (keep only README.md)
+# Documentation
 docs/
 *.md
-!README.md
-!**/README.md
+!.gitignore
 
-
-# Ignore everything in root except essential config files
+# Ignore everything in root except essential config files and apps/src folders
 # Allow only:
 # - package.json, package-lock.json
 # - vite.config.ts
@@ -56,11 +56,22 @@ docs/
 # - tailwind.config.js, postcss.config.js
 # - eslint.config.js
 # - index.html
-# - README.md, LICENSE
+# - LICENSE
 # - .gitignore
 # - apps/ (backend)
 # - src/ (frontend)
-# - scripts/ (utility scripts)
 
-# Exclude other root files/folders that are not needed
-# (everything else is already covered above)
+# Ignore all root files/folders except allowed ones
+/*
+!package.json
+!package-lock.json
+!vite.config.ts
+!tsconfig*.json
+!tailwind.config.js
+!postcss.config.js
+!eslint.config.js
+!index.html
+!LICENSE
+!.gitignore
+!apps/
+!src/
