--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.13.1",
     "daisyui": "^5.3.7",
+    "html2pdf.js": "^0.12.1",
     "jspdf": "^3.0.3",
     "lexical": "0.13.1",
     "lucide-react": "^0.545.0",
